--- a/Algorithmes/Sorting/Makefile
+++ b/Algorithmes/Sorting/Makefile
@@ -2,7 +2,7 @@
 all: bubblesort quicksort
 
 quicksort: quicksort.c
-	gcc quicksort.c -o quicksort
+	gcc quicksort.c -g -o quicksort
 
 bubblesort: bubblesort.c
 	gcc bubblesort.c -o bubblesort
